Harden Spring deployment and origin update flow